# cv-format-annotation-converters

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI-CD-ARTIFACTS-FIX-COMPLETE.md  CI-CD-FIXES-SUMMARY.md  CI-CD-SUMMARY.md  CONDA-GITHUB-ACTIONS-SETUP.md  CONDA-GUIDE.md  CONDA-IMPLEMENTATION-SUMMARY.md  CONDA-INSTALL-GUIDE.md  CONDA-SETUP-CHECKLIST.md  CONDA-SUCCESS-REPORT.md  CONDA.md  CONDA_FORGE_READINESS.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION-GUIDE.md  INSTALLATION.md  ORGANIZATION-COMPLETE.md  README.md  RELEASE.md  SETUP-INSTRUCTIONS.md  bandit-report.json  build-conda-ci.sh  build-conda.sh  environment-dev.yml  environment-windows.yml  environment.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test-conda-setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci-cd.yml  ci.yaml  codeql.yml  publish.yml  update-conda-recipe.yml
conda-recipe/: README.md  bld.bat  build.sh  build.sh.backup  meta-local.yaml  meta.yaml  meta.yaml.bak  meta.yaml.old  meta.yaml.simple
cvannotate/: __init__.py  cli.py  conversion.py  convert.py  types.py
cvannotate/converters/: __init__.py  coco.py  voc.py  yolo.py
cvannotate/formats/: __init__.py  coco.py  voc.py  yolo.py
docs/: v1.0.0-RELEASE-PLAN.md
docs/technical/: ORGANIZATION-COMPLETE.md
scripts/: README.md  build-conda-ci-simple.sh  build-conda-ci.sh  install.sh  test-github-actions-conda.sh  test-upload-process.sh  update_conda_recipe.py  update_recipe.sh  validate-conda-package.sh  validate-github-actions-conda.sh
tests/: test_cli.py  test_convert.py
tests/data/: captions_val2014.json  sample.json  sample.xml
tests/data/annotations/: coco.json  img1.txt  img1.xml
