[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvannotate"
version = "1.0.0"
description = "Convert object detection annotations across formats"
authors = [{name = "Guillermo Alcantara"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer",
    "pillow",
    "defusedxml",
]

[project.scripts]
cvannotate = "cvannotate.cli:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cvannotate"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test
